@@ -22,6 +22,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #19744: the ensurepip installation step now just prints a warning to
+  stderr rather than failing outright if SSL/TLS is unavailable. This allows
+  local installation of POSIX builds without SSL/TLS support.
+
 - Issue #6815: os.path.expandvars() now supports non-ASCII environment
   variables names and values.
 
